# gear-blockchain

./: README.md
contracts/first-gear-app/: Cargo.toml
contracts/first-gear-app/src/: lib.rs
